<resources>
    <string name="app_name">Mobinfo.uz</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="contacts">Контакты</string>
    <string name="adv">Реклама</string>
    <string name="search">Поиск</string>
    <string name="hint" textColor="#FFFFFF">Поиск...</string>
    <string name="hint_sale" textColor="#FFFFFF">Поиск товара...</string>
    <string name="error">  Извините, по вашему запросу ничего не найдено. Попробуйте другие ключевые слова.</string>
    <string name="loading">Загрузка...</string>

    <string name="novosti">Новости</string>
    <string name="novinki">Новинки</string>
    <string name="ratings">Рейтинги</string>
    <string name="compare">Сравнения</string>
    <string name="obzory">Обзоры</string>
    <string name="prilozheniya">Приложения</string>
    <string name="poleznaya">Полезное</string>
    <string name="operators">Операторы</string>
    <string name="seny">Цены</string>


    <string name="read_more">читать дальше →</string>

    <string name="Beeline">Beeline</string>
    <string name="Ucell">Ucell</string>
    <string name="UMS">UMS</string>
    <string name="UzMobile">UzMobile</string>
    <string name="Perfectum">Perfectum</string>
    <string name="title_activity_search">SearchActivit</string>
    <string name="title_activity_searchable">SearchableActivity</string>
    <string name="title_activity_advertisement">AdvertisementActivity</string>
    <string name="title_activity_shopping">ShoppingActivity</string>
    <string name="title_activity_contacts">Contacts</string>

</resources>
